# rapprentice

./: .gitignore  README  runpylint.py  runpylint.sh  todo.txt
calib/: opt_depth_image.py  record_depth_and_joints.py
doc/: Makefile  conf.py  figures.key  index.rst
doc/_templates/: layout.html
example_pipeline/: overhand.py
fastrapp/: CMakeLists.txt  config.hpp  fastrapp.cpp  numpy_utils.hpp  record_rgbd_video.cpp
notes/: failure-cases.txt  picloud_setup.txt
pr2/: base_trajectory_controller.py
rapprentice/: PR2.py  __init__.py  animate_traj.py  bag_proc.py  berkeley_pr2.py  call_and_print.py  cloud_proc_funcs.py  clouds.py  cv_plot_utils.py  func_utils.py  interactive_roi.py  planning.py  plotting_openrave.py  plotting_plt.py  pr2_trajectories.py  registration.py  resampling.py  ros2rave.py  task_execution.py  testing.py  tps.py
rgbd_video/: CMakeLists.txt  record_rgbd_video.cpp
sampledata/: README.txt
sandbox/: todo.txt
scripts/: animate_demo.py  command_pr2.py  create_new_task_dir.py  do_task.py  download_sampledata.py  generate_annotations.py  generate_h5.py  process_point_clouds.py  record_demo.py  show_rope_drag.py  upload_sampledata.py  view_demos.py  view_kinect.py
test/: register_rope_pairs.py  run_all_tests.py  run_registration.py  test_registration_synthetic.py  tps_unit_tests.py  verify_h5.py
test/sampledata/: bad_rope.txt  rope_control_points.txt
